# DDPG-separate-buffer

./: README.md  vel_result_output.txt
Firmware/: CMakeLists.txt
Firmware/Tools/sitl_gazebo/: CMakeLists.txt
Firmware/Tools/sitl_gazebo/include/: gazebo_gps_plugin.h
Firmware/Tools/sitl_gazebo/models/aruco_visual_marker_0/: model.sdf
Firmware/Tools/sitl_gazebo/models/aruco_visual_marker_7/: model.sdf
Firmware/Tools/sitl_gazebo/models/iris_gimbal/: iris_gimbal.sdf
Firmware/Tools/sitl_gazebo/models/irlock/: model.sdf
Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/: component_snippets.xacro  iris_base.xacro
Firmware/Tools/sitl_gazebo/src/: gazebo_gps_plugin.cpp  gazebo_magnetometer_plugin.cpp
Firmware/Tools/sitl_gazebo/src/backup/: gazebo_magnetometer_plugin.cpp
Firmware/gym_px4/gym_px4.egg-info/: PKG-INFO  SOURCES.txt
Firmware/launch/: posix_sitl.launch
Firmware/mavlink/include/mavlink/v2.0/common/: common.h  common.hpp  gtestsuite.hpp  mavlink_msg_vision_target.h  mavlink_msg_vision_target.hpp  testsuite.h  version.h
Firmware/mavlink/include/mavlink/v2.0/message_definitions/: common.xml
Firmware/mavlink/include/mavlink/v2.0/standard/: standard.h  standard.hpp  version.h
Firmware/msg/: CMakeLists.txt  custom_gain.msg
Firmware/src/modules/commander/: PreflightCheck.cpp
Firmware/src/modules/mavlink/: mavlink_receiver.cpp  mavlink_receiver.h
Firmware/src/modules/mc_pos_control/: PositionControl.cpp  PositionControl.hpp  mc_pos_control_main.cpp
Firmware/src/modules/navigator/: precland.cpp
Mobile_Leveling_Platform_V2/: CMakeLists.txt  Mobile_controller.h  marker_box  package.xml
Mobile_Leveling_Platform_V2/Cmesh/: base_link.STL  front_L_tire.STL  under_upper.STL  upper.STL  upper_rev_link.STL
Mobile_Leveling_Platform_V2/config/: gazebo_controller.yaml  gazebo_controller2.yaml  joint_names_Mobile_Leveling_Platform_V2.yaml
Mobile_Leveling_Platform_V2/include/: Mobile_controller.h
Mobile_Leveling_Platform_V2/launch/: MLP.launch  MLP_RL.launch  control.launch  control_RL.launch  display.launch  gazebo.launch  multi.launch  multi_RL.launch
Mobile_Leveling_Platform_V2/launch/backup0714/: control.launch  gazebo (copy).launch
Mobile_Leveling_Platform_V2/meshes/: base_link.STL  base_link_box.STL  front_L_tire_link.STL  front_R_motor_link.STL  front_R_tire_link.STL  front_motor_rev_link.STL  mating_link.STL  mating_link_box.STL  rear_L_motor_rev_link.STL  rear_L_tire_link.STL  rear_Leveling_link.STL  rear_R_motor_rev_link.STL  rear_R_tire_link.STL  under_motor_link.STL  under_upper_link.STL  upper.STL  upper_link.STL  upper_motor_rev_link.STL
Mobile_Leveling_Platform_V2/meshes/aruco_visual_marker_7/: model.urdf.xacro
Mobile_Leveling_Platform_V2/meshes2/: base_link.STL  front_rev_link.STL  rear_link.STL  under_upper.STL  under_upper_L_link.STL  under_upper_R_link.STL  upper_fixed_link.STL
Mobile_Leveling_Platform_V2/msg/: kalman.msg
Mobile_Leveling_Platform_V2/not_use_mesh/: base_link_3.STL  front_leveling_link.STL  rear_L_tire.STL  under_upper.STL  under_upper_pitch_link.STL  under_upper_roll_link.STL  upper.STL  upper_fixed_link.STL  upper_link2.STL  upper_rev_link2.STL
Mobile_Leveling_Platform_V2/src/: cont.cpp  srvcommand.cpp  srvcommand.h
Mobile_Leveling_Platform_V2/urdf/: LMP.sdf  LMP_RL.urdf.xacro  MLP.urdf  MLP.urdf.xacro  Mobile_Leveling_Platform_V2.gazebo.xacro  Mobile_Leveling_Platform_V2.sdf  Mobile_Leveling_Platform_V2.urdf  Mobile_Leveling_Platform_V2.urdf.xacro  beacon.sdf  beacon.urdf.xacro  exp_MLP.urdf  mlp.sdf  mlp.urdf  square.urdf.xacro
Mobile_Leveling_Platform_V2/urdf/backup/: Mobile_Leveling_Platform_V2.gazebo.xacro  Mobile_Leveling_Platform_V2.urdf.xacro
Mobile_Leveling_Platform_V2/urdf/backup0308/: Mobile_Leveling_Platform_V2.urdf.xacro
Mobile_Leveling_Platform_V2/urdf/backup0714/: Mobile_Leveling_Platform_V2.gazebo.xacro  Mobile_Leveling_Platform_V2.urdf.xacro
Mobile_Leveling_Platform_V2/urdf/backup0730/: MLP.urdf  Mobile_Leveling_Platform_V2.urdf.xacro
Mobile_Leveling_Platform_V2/worlds/: ramp.world  ramp?.world
aruco_ros/aruco_msgs/: CMakeLists.txt
aruco_ros/aruco_msgs/msg/: MarkerRecogn.msg
aruco_ros/aruco_ros/launch/: aruco_test.launch  aruco_test_2.launch
aruco_ros/aruco_ros/src/: marker_publish.cpp  simple_single.cpp
drl_uav/: CMakeLists.txt  package.xml
drl_uav/msg/: critic_msg.msg  getEnvinfo.msg  log_data.msg  pushAction.msg  replay_msg.msg  status_save.msg
drl_uav/scripts/: DRL.py  agent_ddpg.py.save  cartpole_libn.h5  critic.py  ddpg_agent.py  landing_vel (back_up).py  landing_vel_Fixed.py  landing_vel_ddpg_normal_Fixed.py  landing_vel_ddpg_normal_fix_hb.py  landing_vel_ddpg_normal_fix_hb_js.py  landing_vel_ddpg_per.py  landing_vel_ddpg_per_Fixed.py  landing_vel_ddpg_per_fix_hb.py  landing_vel_prev.py  landing_vel_sepmem_fix_hb.py  landing_vel_sepmem_fix_hb_js.py  landing_vel_sepmem_fix_hb_testmode.py  landing_vel_td3.py  log_data.py  replay.py  sb_landing_vel.py  talker (copy).py  talker_ddpg_final.py  talker_ddpg_final_gazebo.py  tld_test.py  tracking_landing_ddpg.py  vel_tracking.py
drl_uav/scripts/ddpg/: ddpg.py
drl_uav/srv/: .getEnvinfo.srv.swo  getEnvinfo.srv  getEnvinfo.srv.save  getEnvinfo_att.srv  getLandingState.srv
drone_state/: CMakeLists.txt  package.xml
drone_state/include/: offb_RL (another copy).h  offb_RL (copy).h  offb_RL.h  offboard.h
drone_state/msg/: custom_gain.msg  variance.msg
drone_state/src/drone_control/: RL_quad_env (2021_06_10).cpp  RL_quad_env(backup).cpp  RL_quad_env.cpp  RL_quad_env_save.cpp  RL_quad_env_save_ddpg_sepmem.cpp  RL_quad_env_save_ddpg_sepmem_fix1.cpp  RL_quad_env_save_normal.cpp  RL_quad_env_save_normal_fix1.cpp  RL_quad_env_save_per.cpp  RL_quad_env_save_per_fix1.cpp  circle.cpp  drone_state.cpp  gps_vision_tracking.cpp  keyboard_cmd.cpp  offb_node_backup.cpp  offb_node_backup2.cpp  take_off_and_land.cpp  test_gpsvision.cpp
hector_gazebo/hector_gazebo_plugins/src/: gazebo_ros_gps.cpp
